<resources>
    <string name="app_name">Allegro Repositories</string>
    <string name="gold_star_image_description">Gold star</string>
    <string name="description">Description</string>
    <string name="main_language">Main language:</string>
    <string name="creation_date">Creation date:</string>
    <string name="date_of_last_commit">Date of last commit:</string>
    <string name="default_branch">Default branch:</string>
    <string name="show_on_github">Show on GitHub</string>
    <string name="languages">Languages:</string>
    <string name="refresh_failed_toast_message">"Refresh failed.Check your internet connection"</string>
    <string name="refresh_done_toast_message">"Repositories refreshed"</string>
    <string name="search">"Search"</string>
    <string name="no_repositories_found">No repositories found.\nCheck your internet connection</string>
    <string name="sorting">Sorting</string>
    <string name="stars">Stars</string>
    <string name="last_commit">Last commit</string>
    <string name="alphabetical">Alphabetical</string>
</resources>